-added the high level Makefile for libc and kernel -Fixed the kernel Makefile(it was not using the i686 gcc for some reasion so added a CC explicitly -At & T style change in crti.S instead of intel tho i dont think that should have beed a problem but anyway, i fixed it. If it causes any issue we can revert it any time. I mean i can revert it i'm the only one working on this project hehe

--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -1,7 +1,8 @@
 DEFAULT_HOST!=../default-host.sh
-HOST?=DEFAULT_HOST
+HOST?=$(DEFAULT_HOST)
 HOSTARCH!=../target-triplet-to-arch.sh $(HOST)
 
+CC = i686-elf-gcc
 CFLAGS?=-O2 -g
 CPPFLAGS?=
 LDFLAGS?=
@@ -13,10 +14,10 @@ EXEC_PREFIX?=$(PREFIX)
 BOOTDIR?=$(EXEC_PREFIX)/boot
 INCLUDEDIR?=$(PREFIX)/include
 
-CFLAGS:=$(CFLAGS) -ffreestanding -Wall -Wextra
-CPPFLAGS:=$(CPPFLAGS) -D__is_kernel -Iinclude
+CFLAGS:=$(CFLAGS) -ffreestanding -Wall -Wextra -fno-stack-protector
+CPPFLAGS:=$(CPPFLAGS) -D__is_kernel -Iinclude -I../libc/include
 LDFLAGS:=$(LDFLAGS)
-LIBS:=$(LIBS) -nostdlib -lk -lgcc
+LIBS:=$(LIBS) -nostdlib -L../libc -lk -lgcc
 
 ARCHDIR=arch/$(HOSTARCH)
 
@@ -64,6 +65,11 @@ $(ARCHDIR)/crtbegin.o $(ARCHDIR)/crtend.o:
 
 .S.o:
 	$(CC) -MD -c $< -o $@ $(CFLAGS) $(CPPFLAGS)
+	
+.s.o:
+	$(CC) -MD -c $< -o $@ $(CFLAGS) $(CPPFLAGS)
+
+
 
 clean:
 	rm -f somendraOS.kernel
