added PMM and heap memory yet to add vmm

--- a/kernel/arch/i386/make.config
+++ b/kernel/arch/i386/make.config
@@ -8,3 +8,14 @@ $(ARCHDIR)/boot.o \
 $(ARCHDIR)/tty.o \
 $(ARCHDIR)/gdt.o \
 $(ARCHDIR)/gdt_flush.o \
+$(ARCHDIR)/idt.o \
+$(ARCHDIR)/idt_flush.o\
+$(ARCHDIR)/isr.o\
+$(ARCHDIR)/interrupts.o\
+$(ARCHDIR)/irq_asm.o\
+$(ARCHDIR)/irq.o\
+$(ARCHDIR)/vga_debug.o\
+$(ARCHDIR)/keyboard.o\
+$(ARCHDIR)/pmm.o\
+$(ARCHDIR)/heap.o
+
